@@ -207,6 +207,14 @@ void ConnectionManager::on(TimerManagerListener::Second, u_int32_t aTick) throw(
 					pendingAdd.erase(it);
 				}
 			} else {
+				if(cqi->getState() == ConnectionQueueItem::WAITING) {
+					UserConnection::List::iterator it = find(pendingDelete.begin(), pendingDelete.end(), cqi->getConnection());
+					if(it != pendingDelete.end()) {
+						cqi->setConnection(NULL);
+						removed.push_back(cqi);
+						continue;
+					}
+				} 
 				
 				if(!cqi->getUser()->isOnline()) {
 					// Not online anymore...remove it from the pending...
@@ -645,7 +653,7 @@ void ConnectionManager::on(UserConnectionListener::Failed, UserConnection* aSour
 			dcassert(cqi->getState() == ConnectionQueueItem::IDLE);
 			cqi->setState(ConnectionQueueItem::WAITING);
 			cqi->setLastAttempt(GET_TICK());
-			cqi->setConnection(NULL);
+			//cqi->setConnection(NULL);
 			aSource->setCQI(NULL);
 		}
 	}
@@ -709,5 +717,5 @@ void ConnectionManager::on(UserConnectionListener::Supports, UserConnection* con
 
 /**
  * @file
- * $Id: ConnectionManager.cpp,v 1.102 2005/04/24 08:13:10 arnetheduck Exp $
+ * $Id: ConnectionManager.cpp,v 1.103 2005/05/03 15:37:53 arnetheduck Exp $
  */
