@@ -10,6 +10,7 @@
 * Connection type freely settable, and default connection strings changed
 * No longer fallbacks to passive mode on failed UPnP
 * Janitorial cleanups (thanks garg)
+* Removed some old favorite file format compatibility code
 
 -- 0.674 2005-04-10 --
 *** WARNING ***
